<!--
  ~ Copyright 2015 75py
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="adUnitId" translatable="false">ca-app-pub-2998260208076899/9431352962</string>

    <string name="app_name">Aplin</string>

    <string name="action_share">Share</string>
    <string name="action_share_label">App name</string>
    <string name="action_share_package_name">Package name</string>
    <string name="action_share_label_and_package_name">App name &amp; Package name</string>
    <string name="action_share_csv">CSV</string>
    <string name="action_search">Search</string>
    <string name="action_reload">Reload</string>
    <string name="action_preference">Preference</string>
    <string name="action_open_source_license">Open source license</string>

    <string name="category">Categories</string>
    <string name="category_all">All</string>
    <string name="category_all_summary" />
    <string name="category_system">System</string>
    <string name="category_system_summary" />
    <string name="category_system_undisablable">Undisablable</string>
    <string name="category_system_undisablable_summary">Applications that you cannot click disable button.</string>
    <string name="category_system_disablable">Disablable</string>
    <string name="category_system_disablable_summary">Applications that you can click disable button.</string>
    <string name="category_disabled">"Disabled"</string>
    <string name="category_disabled_summary" />
    <string name="category_user">"User"</string>
    <string name="category_user_summary" />
    <string name="category_default">Default</string>
    <string name="category_default_summary">Applications that are default for some action. Ex: launcher app</string>
    <string name="category_recently_used">Recently used</string>
    <string name="category_recently_used_summary">Please allow usage access</string>
    <string name="category_internet_permissions">Internet permissions</string>
    <string name="category_internet_permissions_summary" />
    <string name="category_runtime_permissions">Runtime permissions</string>
    <string name="category_runtime_permissions_summary" />
    <string name="category_system_alert_window_permission">Draw over other apps</string>
    <string name="category_system_alert_window_permission_summary" />

    <string name="sort">Sort</string>
    <string name="sort_default">Default</string>
    <string name="sort_default_summary">Order by app name, package name</string>
    <string name="sort_package_name">Package name</string>
    <string name="sort_package_name_summary">Order by package name</string>
    <string name="sort_update_time_desc">Update time desc</string>
    <string name="sort_update_time_desc_summary">Order by update time desc, app name, packagename</string>

    <string name="display_item">Display items</string>
    <string name="display_item_not_installed">Not installed</string>
    <string name="display_item_not_installed_summary" />
    <string name="display_item_not_installed_format">Not installed</string>
    <string name="display_item_first_install_time">First install time</string>
    <string name="display_item_first_install_time_summary" />
    <string name="display_item_first_install_time_format">First install : %1$s</string>
    <string name="display_item_last_update_time">Last update time</string>
    <string name="display_item_last_update_time_summary" />
    <string name="display_item_last_update_time_format">Last update : %1$s</string>
    <string name="display_item_recently_used_count">Recently used count</string>
    <string name="display_item_recently_used_count_summary">Please allow usage access</string>
    <string name="display_item_recently_used_count_format">Recently used : %1$s</string>
    <string name="display_item_version_name">Version name</string>
    <string name="display_item_version_name_summary" />
    <string name="display_item_version_name_format">Version: %1$s</string>
    <string name="display_item_internet_permission">Internet Permission</string>
    <string name="display_item_internet_permission_summary" />
    <string name="display_item_internet_permission_label">[Internet]</string>
    <string name="display_item_deniable_permissions">Deniable Permissions</string>
    <string name="display_item_deniable_permissions_summary" />
    <string name="display_item_deniable_permissions_separator">/</string>


    <!-- GA -->
    <string name="ga_trackingId">UA-9578951-16</string>
    <string name="ga_confirm_dialog_title">Google Analytics</string>
    <string name="ga_confirm_dialog_message">AplinはGoogle Analyticsにより匿名の情報収集を行います。\n収集した情報は、今後のアプリ開発に使用させていただきます。\nこの設定はいつでも変更できます。</string>
    <string name="ga_confirm_dialog_agree">Agree</string>
    <string name="ga_confirm_dialog_disagree">Disagree</string>
    <string name="ga_preference_category">Analytics</string>
    <string name="ga_preference_key">ga_confirm</string>
    <string name="ga_preference_title">Allow analytics</string>
    <string name="ga_preference_summary">匿名の情報収集を行います。収集した情報は、今後のアプリ開発に使用させていただきます。</string>

    <!-- about -->
    <string name="about">About</string>
    <string name="version_title">Version</string>
    <string name="source_code_title">Source code</string>
    <string name="source_code_url">https://github.com/75py/Aplin</string>
    <string name="open_source_license">Open source license</string>
</resources>
